# black-widow-users

./: .env.template  .gitignore  .prospector.yml  Dockerfile  Makefile  app.py  docker-compose.yaml  main.py  prepare_config.py  pyproject.toml  serverless.yml
.chalice/: config.json  config.template.json
.github/workflows/: main.yml
chalicelib/data_access/: dynamodb.py  user.py
chalicelib/models/: user.py
chalicelib/routes/: token.py  user.py
chalicelib/services/: __init__.py  token.py  user.py
chalicelib/settings/: __init__.py  aws.py  dynamodb.py  security.py
chalicelib/utils/: authorization.py
scripts/: prepare_config.py
src/: authorizer.py  enums.py  instances.py
src/data_access/: abstract.py  dynamodb.py  user.py
src/middleware/: token.py
src/models/: abstract.py  dynamodb.py  token.py  user.py
src/routes/: token.py  user.py
src/schemas/: user.py
src/services/: __init__.py  token.py  user.py
src/settings/: __init__.py  aws.py  security.py
src/utils/: authorization.py  errors.py  exceptions.py  password.py
tests/: conftest.py
tests/integration/: conftest.py
tests/integration/test_data_access/: test_user.py
tests/integration/test_routes/: conftest.py  test_token.py  test_user.py
tests/integration/test_service/: conftest.py  test_token.py  test_user.py
tests/unit/test_models/: test_user.py
